@@ -69,7 +69,6 @@ CONFIG_STM32_BUILDROOT=n
 #
 # JTAG Enable settings (by default JTAG-DP and SW-DP are disabled):
 #
-CONFIG_STM32_DFU=y
 CONFIG_STM32_JTAG_FULL_ENABLE=y
 CONFIG_STM32_JTAG_NOJNTRST_ENABLE=n
 CONFIG_STM32_JTAG_SW_ENABLE=n
@@ -100,7 +99,7 @@ CONFIG_STM32_OTGHS=n
 CONFIG_STM32_DCMI=n
 CONFIG_STM32_CRYP=n
 CONFIG_STM32_HASH=n
-CONFIG_STM32_RNG=n
+CONFIG_STM32_RNG=y
 CONFIG_STM32_OTGFS=n
 # AHB3:
 CONFIG_STM32_FSMC=n
@@ -306,6 +305,7 @@ CONFIG_SCHED_WORKSTACKSIZE=2048
 CONFIG_SIG_SIGWORK=4
 CONFIG_SCHED_WAITPID=y
 CONFIG_SCHED_ATEXIT=n
+CONFIG_DEV_RANDOM=y
 
 #
 # System Logging
